test/types/string/bradc/string2ints/badstring2int64.chpl
var s = "1e";

var x64 = s:int(64);
writeln("x64 is: ", x64);

